--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<div class="social-icons">
 			<ul>
 				<li><a href=https://www.facebook.com/diogenes.costadossantos/ target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-				<li><a href=https:https://www.linkedin.com/in/di%C3%B3genes-costa-19a641185/ target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+				<li><a href=https://www.linkedin.com/in/di%C3%B3genes-costa-19a641185/ target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
 				<li><a href=https://www.instagram.com/diogenescosta_/ target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 			</ul>
 		</div>
